# EML2PDF

./: .gitmodules  README.md  pyproject.toml
docs/: decisions.md
scripts/: build_windows.ps1  run_tests.ps1
src/eml2pdf/: __init__.py  cli.py  convert.py
tests/: test_convert.py
