[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eml2pdf"
version = "0.1.0"
description = "Batch convert EML files to PDFs"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Your Name"}
]
keywords = ["eml", "pdf", "email", "batch"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "reportlab>=4.0.0",
  "beautifulsoup4>=4.12.0"
]

[project.optional-dependencies]
html = [
  "weasyprint>=61.0"
]
dev = [
  "ruff>=0.5.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0"
]

[project.scripts]
eml2pdf = "eml2pdf.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
